# pyperch

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/agents/: code-reviewer.agent.md
docs/: general_usage_guide.md  search.md
docs/api/: README.md
docs/api/entrypoints/: README.md  optuna.md  perch.md
examples/: GA_examples.ipynb  RHC_examples.ipynb  SA_examples.ipynb  custom_plots.ipynb  grid_search.ipynb  refactor_test_GA.ipynb  refactor_test_GA_newBUILDER.ipynb  refactor_test_RHC.ipynb  refactor_test_RHC_newBUILDER.ipynb  refactor_test_SA.ipynb  refactor_test_SA_newBuilder.ipynb  regression_sa.py
examples/.ipynb_checkpoints/: refactor_test_RHC-checkpoint.ipynb
examples/search/: optuna_search_example.py
examples/standalone/ga/: ga_classification.py  ga_regression.py
examples/standalone/rhc/: rhc_classification.py  rhc_freeze.py  rhc_hybrid_adam.py  rhc_regression.py  transfer_nn_example.py
examples/standalone/sa/: sa_classification.py  sa_regression.py
notebooks/: backprop_network.ipynb  basic_usage.ipynb  ga_opt_network.ipynb  hybrid_rhc_network.ipynb  regression_examples.ipynb  rhc_opt_network.ipynb  sa_opt_network.ipynb  test3.py
pyperch/: __init__.py  builder.py
pyperch/algorithms/: algorithms.py
pyperch/config/: __init__.py  schema.py
pyperch/core/: callbacks.py  engine.py  metrics.py  trainer.py
pyperch/models/: mlp.py
pyperch/neural/: backprop_nn.py  ga_nn.py  rhc_nn.py  sa_nn.py
pyperch/optim/: __init__.py  base.py  es.py  ga.py  interface.py  rhc.py  sa.py
pyperch/search/: __init__.py  adapter.py  builder.py  factory.py  grid.py  optuna.py  optuna_search.py  random.py  strategy.py
pyperch/utils/: __init__.py  data.py  decorators.py  freeze.py  plots.py  random.py  seed.py  test.py  tracking.py
tests/: test_backprop.py  test_freeze_functionality.py  test_freezing_trainer.py  test_ga.py  test_integration_features.py  test_optuna_search_smoke.py  test_perch_learns.py  test_plotting_smoke.py  test_regression.py  test_reproducibility.py  test_rhc.py  test_sa.py
tests/optim/: test_ga.py  test_rhc.py  test_sa.py
