[project]
name = "pyperch"
version = "0.2.0"
description = "pyperch refactor"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "matplotlib",
    "notebook (>=7.5.0,<8.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "ruff (>=0.14.8,<0.15.0)",
]

optuna = [
    "optuna (>=3.6.0,<4.0.0)"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "I"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["pyperch"]
