[project]
name = "pyperch"
version = "0.2.1"
description = "pyperch refactor"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "torch",
    "numpy",
    "matplotlib",
    "scikit-learn>=1.7.2,<2.0.0",
    "pytest>=9.0.2,<10.0.0", # workaround for circleci 
    "optuna>=3.6.0,<4.0.0",
]

# --- Build System ---
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# --- Optional Dependency Groups ---
[project.optional-dependencies]
dev = [
    "black>=25.11.0,<26.0.0",
    "ruff>=0.14.8,<0.15.0",
]

# --- Ruff Config ---
[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "I"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["pyperch"]
