[tool.poetry]
name = "pyperch"
version = "0.3.0"
description = "PyTorch-native randomized optimization algorithms."
authors = ["John Mansfield"]
readme = "README.md"
license = "MIT"
keywords = [
    "pytorch",
    "optimization",
    "machine-learning",
    "randomized-optimization",
]

packages = [{ include = "pyperch" }]

[tool.poetry.urls]
Homepage = "https://github.com/jlm429/pyperch"
Repository = "https://github.com/jlm429/pyperch"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
torch = ">=2.1,<3.0"
numpy = ">=1.24"
optuna = { version = "^4.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.8.0"
scikit-learn = "^1.4"
matplotlib = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B905"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.poetry.extras]
optuna = ["optuna"]